--- a/css/styles.css
+++ b/css/styles.css
@@ -957,3 +957,22 @@ section {
 .scroll-btn.show {
   display: block; /* показуємо коли додається клас .show */
 }
+
+/* резюме */
+#resume {
+  display: none;
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 100%;
+  height: 70%;
+  background-color: white;
+  z-index: 9999;
+  overflow-y: auto;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  border-bottom: 2px solid #007bff;
+  padding: 20px;
+  box-sizing: border-box;
+}
