--- a/css/styles.css
+++ b/css/styles.css
@@ -1285,7 +1285,7 @@ section {
   margin: 0 auto;
   min-width: 169px;
   height: 56px;
-  background: #428d93;
+  background-color: #428d93;
   border: none;
   border-radius: 4px;
   font-weight: 500;
