--- a/css/styles.css
+++ b/css/styles.css
@@ -957,7 +957,7 @@ section {
   display: none; /* ховаємо кнопку спочатку */
   padding: 10px 40px;
   font-size: 1.5rem;
-  background: linear-gradient(135deg, #e672da, #de74ea);
+  background: linear-gradient(135deg, #daf9f4, #40766d);
   color: #1e1b1b;
   border: none;
   border-radius: 10%;
