--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,8 @@ section {
 }
 
 /* .mobile-menu-link-resume {
-  max-width: 80%;
+  min-width: 90%;
+  min-height: 90%;
 } */
 
 .mobile-menu-social-list {
@@ -991,7 +992,7 @@ section {
   transform: translateX(-50%);
   width: 80%;
   max-width: 100%;
-  height: 70%;
+  height: 80%;
   background-color: rgba(255, 255, 255, 0.979);
   z-index: 9999;
   overflow-y: auto;
