--- a/css/styles.css
+++ b/css/styles.css
@@ -857,6 +857,7 @@ section {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
   gap: 20px;
 }
 
@@ -874,9 +875,10 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 40px;
+    gap: 20px;
     padding-top: 70px;
     padding-bottom: 70px;
+    flex-wrap: nowrap;
   }
 
   .social-media {
